--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,11 +65,12 @@ a, button {
 
 .button-border {
   background-color: #f1f3f6;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   box-shadow: 3px 3px 3px #dadada, -3px -3px 3px #fafafa;
   display: inline-block;
   padding: 1px;
 }
+
 
 .button-border button {
   background-color: transparent;
@@ -77,14 +78,14 @@ a, button {
 
 .button-border {
   background-color: #f1f3f6;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   box-shadow: 3px 3px 3px #dadada, -3px -3px 3px #fafafa;
   display: inline-block;
   padding: 1px;
 }
 
 .pill-button {
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   border: none;
   padding: 10px 30px;
   transition: all 0.3s ease;
@@ -300,7 +301,8 @@ header {
 .social-box {
   position: absolute;
   left: 1.5rem;
-  bottom: 0;
+  /* bottom: 0; */
+  top:55%;
   width: 1.5rem;
   z-index: 100;
 }
@@ -383,6 +385,7 @@ header {
   transform: translateY(0);
   padding-right: 1rem;
   color: #3c3c3c;
+  
 }
 
 #pp-nav li .active span {
@@ -756,7 +759,7 @@ canvas.particles-js-canvas-el {
 .hero-03 .circle {
   width: 85px;
   height: 85px;
-  background: #1ab394;
+  background: #fbdd62;
   border-radius: 50%;
   opacity: 0.9;
   position: absolute;
@@ -779,7 +782,7 @@ canvas.particles-js-canvas-el {
 .hero-03 .circle-2 {
   width: 55px;
   height: 55px;
-  background: #fbdd62;
+  background: #0cc0de;
   border-radius: 50%;
   opacity: 0.9;
   position: absolute;
